[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Scripts/Dead_body.gd" type="Script" id=1]
[ext_resource path="res://assets/Evidence/dead_body_sprite.png" type="Texture" id=2]
[ext_resource path="res://assets/Evidence/claws_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/interaction_progress.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/backstamina.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
render_priority = 1
blend_mode = 3
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 3
light_mode = 2

[sub_resource type="CircleShape2D" id=4]
radius = 36.2215

[sub_resource type="CircleShape2D" id=2]
radius = 154.003

[sub_resource type="Theme" id=5]

[node name="Dead_body" type="RigidBody2D"]
material = SubResource( 1 )
mode = 2
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="body" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="body"]
visible = false
margin_left = -76.0
margin_top = -97.0
margin_right = 764.0
margin_bottom = 676.0
rect_scale = Vector2( 0.0941208, 0.0941208 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="spacing" type="CollisionShape2D" parent="."]
z_index = -1
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="ProgressBar" type="TextureProgress" parent="."]
visible = false
light_mask = 0
margin_left = -23.0
margin_top = -81.0
margin_right = -7.0
margin_bottom = -65.0
rect_rotation = 89.9999
rect_scale = Vector2( 1.77082, 1.77082 )
theme = SubResource( 5 )
max_value = 7.0
rounded = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
